{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 264,
  "lineage": "2730c976-2a15-319e-f2dd-d9204b12142b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:internet-gateway/igw-011dd033425abdaa3",
            "id": "igw-011dd033425abdaa3",
            "owner_id": "667563228432",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-04d8686adedd41311"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/test-lb/dfdd292c2e6dcdf9",
            "arn_suffix": "app/test-lb/dfdd292c2e6dcdf9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-535735900.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/test-lb/dfdd292c2e6dcdf9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ede2dd697d406e76"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09ce3208f59b63af6"
              },
              {
                "subnet_id": "subnet-0cc8ed401082b79e1"
              }
            ],
            "subnets": [
              "subnet-09ce3208f59b63af6",
              "subnet-0cc8ed401082b79e1"
            ],
            "vpc_id": "vpc-04d8686adedd41311",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.test-sg",
            "aws_subnet.testsubnet-1",
            "aws_subnet.testsubnet-2",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:listener/app/test-lb/dfdd292c2e6dcdf9/7cf82550de806426",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/test-tg/22b5fca0fcd68af9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:listener/app/test-lb/dfdd292c2e6dcdf9/7cf82550de806426",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/test-lb/dfdd292c2e6dcdf9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-lb",
            "aws_lb_target_group.test-tg",
            "aws_security_group.test-sg",
            "aws_subnet.testsubnet-1",
            "aws_subnet.testsubnet-2",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/test-tg/22b5fca0fcd68af9",
            "arn_suffix": "targetgroup/test-tg/22b5fca0fcd68af9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/test-tg/22b5fca0fcd68af9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04d8686adedd41311"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:route-table/rtb-0bf814e0b9f525a2a",
            "id": "rtb-0bf814e0b9f525a2a",
            "owner_id": "667563228432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011dd033425abdaa3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route"
            },
            "tags_all": {
              "Name": "test-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d8686adedd41311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ce0bead810abdf",
            "route_table_id": "rtb-0bf814e0b9f525a2a",
            "subnet_id": "subnet-09ce3208f59b63af6"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-route",
            "aws_subnet.testsubnet-1",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e3e6bf554a73e1",
            "route_table_id": "rtb-0bf814e0b9f525a2a",
            "subnet_id": "subnet-0cc8ed401082b79e1"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-route",
            "aws_subnet.testsubnet-2",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:security-group/sg-0ede2dd697d406e76",
            "description": "allowing some inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ede2dd697d406e76",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "667563228432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d8686adedd41311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testsubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-09ce3208f59b63af6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ce3208f59b63af6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testsubnet-1"
            },
            "tags_all": {
              "Name": "testsubnet-1"
            },
            "vpc_id": "vpc-04d8686adedd41311"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testsubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-0cc8ed401082b79e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc8ed401082b79e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testsubnet-2"
            },
            "tags_all": {
              "Name": "testsubnet-2"
            },
            "vpc_id": "vpc-04d8686adedd41311"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:vpc/vpc-04d8686adedd41311",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcc5a45ef06a7102",
            "default_route_table_id": "rtb-0b0f04f633468a9b4",
            "default_security_group_id": "sg-03d8fa6994e9a061c",
            "dhcp_options_id": "dopt-0f6d0758a45b38af5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d8686adedd41311",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0f04f633468a9b4",
            "owner_id": "667563228432",
            "tags": {
              "Name": "testvpc"
            },
            "tags_all": {
              "Name": "testvpc"
            }
          }
        }
      ]
    }
  ]
}